<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zacharee1.rctdremoverforlg.InstallerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:onClick="handlePatch"
            android:text="@string/patch_boot_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/flash_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:onClick="handleFlash"
            android:text="@string/flash_patched_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/install" />

        <Button
            android:id="@+id/backup_orig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#0f0"
            android:onClick="handleBackup"
            android:text="@string/back_up_current_boot"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flash_img" />

        <TextView
            android:id="@+id/reommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/it_is_strongly_recommended_that_you_back_up_your_current_boot_img"
            android:textAlignment="center"
            android:textColor="#f00" />

        <TextView
            android:id="@+id/credit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/credits"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/app_made_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wrapper_by"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/aik_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aik_by"
            android:textAlignment="center" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
